--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+input {
+    border: 1px;
+    margin-right: 0.25rem;
+  }
+  
