--- a/src/app/workflow-step/workflow-step.component.html
+++ b/src/app/workflow-step/workflow-step.component.html
@@ -1,8 +1,8 @@
 <div [formGroup]="stepForm"  class="flex flex-row p-1">
-    <!-- <input formControlName="role" />
+    <input formControlName="role" />
     <input formControlName="actionName" />
     <input type="number" formControlName="sequence" />
     <input formControlName="postAction" />
     <input type="checkbox" formControlName="mandatory" />
-    <input formControlName="sla" /> -->
+    <input formControlName="sla" />
   </div>
